# cartel

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  VERSION  bump-version.sh  cartel.yaml  launch-daemon.sh  publish_release  release.sh
.github/workflows/: build.yml  nightly-build.yml  rust.yml
docs/: README.md
src/: collections.rs  command_builder.rs  config.rs  constants.rs  dependency.rs  detach.rs  lib.rs  path.rs  process.rs  shell.rs  thread_control.rs
src/client/: cli.rs  cmd.rs  commands.rs  config.rs  conversions.rs  convert.rs  definitions.rs  emoji.rs  mod.rs  module.rs  process.rs  progress.rs  request.rs  terminal.rs  validation.rs
src/client/commands/: config.rs  convert.rs  daemon.rs  deploy.rs  deployer.rs  down.rs  exec.rs  logs.rs  mod.rs  ps.rs  restart.rs  run.rs  shell.rs  stop.rs
src/client/examples/: cartel.yml
src/daemon/: bootstrap.rs  cli.rs  core.rs  env_grabber.rs  error.rs  executor.rs  logs.rs  mod.rs  module.rs  planner.rs  signal.rs  time.rs
src/daemon/api/: convert.rs  converter.rs  engine.rs  error.rs  handlers.rs  mod.rs
src/daemon/monitor/: commands.rs  mod.rs  poll.rs  runtime.rs  state.rs
tests/: .flake8  Makefile  pyproject.toml  status.md
tests/execshim/: Cargo.toml
tests/execshim/src/: main.rs
tests/runtime/: client.py  conftest.py  helpers.py  paths.py  shim.py  test_checks.py  test_dependencies_ordering.py  test_deploy.py  test_environment_sets.py  test_exec.py  test_logs.py  test_probes.py  test_ps.py  test_service.py  test_setup.py  test_stop.py  test_task.py
