[package]
name = "cartel"
version = "0.12.1-beta"
authors = ["xdrop <xdrop.me@gmail.com>"]
edition = "2018"

[lib]
name = "cartel"
path = "src/lib.rs"

[[bin]]
name = "daemon"
path = "src/daemon/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.8.2"
chrono = "0.4.19"
timeago = "0.2.1"
signal-hook = "0.2.2"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
clap = "2.33.3"
reqwest = { version = "0.12.14", features = ["blocking", "json", "charset"], default-features=false  }
anyhow = "1.0.97"
thiserror = "1.0"
indicatif = "0.16.2"
console = "0.13.0"
dirs = "3.0.1"
tabwriter = { version = "1.2.1", features = ["ansi_formatting"] }
nix = "0.22.0"
tokio = { version = "1.43.0", features = ["full"]}
parking_lot = "0.11.1"
uuid = {version = "0.8.1", features =  ["v4"]}
grep-searcher = "0.1.7"
grep-regex = "0.1.8"
grep-matcher = "0.1.4"
crossbeam-utils = "0.8.3"
crossbeam-queue = "0.3"
text_io = "0.1.8"
toml_edit = "0.2.1"
toml = "0.5"
phf = { version = "0.9", features = ["macros"] }
lazy_static = "1.4.0"
