[tool.poetry]
name = "runtime"
version = "0.1.0"
description = "Runtime tests for cartel"
authors = ["xdrop"]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
psutil = "^5.8.0"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
pexpect = "^4.8.0"
strip-ansi = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
